test/invalid/sample11.ml
print 1
print xabda()

function xabda dd
	return 1 + 2 + dd
print xabda(1)
